# graphql-federation-benchmarks

./: .dockerignore  .gitignore  .rules.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.rust  README.md  REPORT.md  cli.sh  compose.yml  config.toml  devenv.nix  docker-clean.sh  package-lock.json  package.json  plan.md  test_chart.rs  test_report.sh  test_report_with_charts.md  x.md
benchmarks/: default.toml
benchmarks/big-response/: compose.yml  config.toml  k6.js  subgraph.graphql
benchmarks/big-response/cosmo/: compose.yml  supergraph.json
benchmarks/big-response/gateways/apollo-router/: schema.graphql
benchmarks/big-response/gateways/grafbase/: grafbase.toml
benchmarks/big-response/request/: body.json
benchmarks/big-response/subgraph/: Cargo.toml
benchmarks/big-response/subgraph/src/: main.rs  schema.rs
benchmarks/many-plans/: compose.yml  config.toml  k6.js  subgraph1.graphql  subgraph2.graphql  subgraph3.graphql  subgraph5.graphql
benchmarks/many-plans/cosmo/: compose.yml  supergraph.json
benchmarks/many-plans/gateways/apollo-router-custom/: router.yml
benchmarks/many-plans/gateways/grafbase/: grafbase.toml  schema.graphql
benchmarks/many-plans/subgraph/: Cargo.toml
benchmarks/many-plans/subgraph/src/: main.rs  schema.rs
benchmarks/many-possible-query-plans/: compose.yml  k6.js  summary.json
benchmarks/many-possible-query-plans/gateways/: config.toml
benchmarks/many-possible-query-plans/gateways/grafbase/: schema.graphql
benchmarks/many-possible-query-plans/request/: body.json
benchmarks/many-possible-query-plans/subgraph/: Cargo.toml
benchmarks/many-possible-query-plans/subgraph/src/: main.rs  schema.rs
crates/cli/: Cargo.toml
crates/cli/src/: benchmark.rs  charts.rs  config.rs  docker.rs  gateway.rs  k6.rs  main.rs  report.rs  resources.rs  system.rs
crates/cli/src/charts/: efficiency.rs  latency.rs  mod.rs  quality.rs
crates/cli/src/commands/: bench.rs  list.rs  mod.rs  run.rs
crates/subgraph/: Cargo.toml
crates/subgraph/big-response/: Cargo.toml
crates/subgraph/big-response/schemas/: subgraph0.graphql  subgraph1.graphql
crates/subgraph/big-response/src/: main.rs  schema.rs
crates/subgraph/fed/: Cargo.toml
crates/subgraph/fed/schemas/: accounts.graphql  inventory.graphql  products.graphql  reviews.graphql
crates/subgraph/fed/src/: main.rs
crates/subgraph/fed/src/schema/: accounts.rs  inventory.rs  mod.rs  products.rs  reviews.rs
crates/subgraph/many-plans/: Cargo.toml
crates/subgraph/many-plans/schemas/: subgraph4.graphql  subgraph6.graphql
crates/subgraph/many-plans/src/: schema.rs
crates/subgraph/src/: lib.rs  state.rs
gateways/: config.toml
gateways/apollo-router/: deduplication.yml  no-cache.yml  router.yml
gateways/cosmo/: compose.sh  config.yml  no-cache.yml
gateways/grafbase/: grafbase.toml  no-cache.toml
gateways/hive/: gateway.config.ts
gateways/hive-gateway/: config.ts  no-cache.config.ts
gateways/hive-router/: config.yaml
scenarios/: config.toml
scenarios/big-response/: body.json  k6.js
scenarios/deduplication/: body.json  expected.json  k6.js
scenarios/long-lived-big-response/: body.json  k6.js
scenarios/many-plans/: expected.json  k6.js
scenarios/query/: k6.js
src/: benchmark.rs  cli.rs  config.rs  docker.rs  gateway.rs  k6.rs  main.rs  orchestrator.rs  report.rs  resources.rs  results.rs  system.rs
src/cli/: list.rs  mod.rs  run.rs
supergraphs/: config.toml
supergraphs/big-response/: schema.graphql
supergraphs/big-response/cosmo/: compose.yml  supergraph.json
supergraphs/fed/: schema.graphql
supergraphs/fed/cosmo/: compose.yml  supergraph.json
supergraphs/many-plans/cosmo/: compose.yml  supergraph.json
