[package]
name = "graphql-federation-benchmarks"
version = "0.1.0"
edition = "2021"

[profile.bench]
strip = "none"
debug = true

[dependencies]
argh = "0.1"
tokio = { version = "1", features = ["full"] }
bollard = { version = "0.19", features = ["time"] }
duct = "1.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
time = { version = "0.3", features = ["serde", "macros"] }
anyhow = "1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1"
