[workspace]
members = [
    "crates/*",
    "crates/subgraph/big-response",
    "crates/subgraph/fed",
    "crates/subgraph/many-plans",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
argh = "0.1"
async-graphql = "7"
axum = "0.8"
bollard = { version = "0.19", features = ["time"] }
duct = "1.1"
fast-glob = "1"
futures-util = "0.3"
insta = "1"
itertools = "0.14"
minicbor-serde = { version = "0.6.0", features = ["alloc"] }
once_cell = "1"
postcard = { version = "1", features = ["use-std"] }
quick_cache = "0.6"
rand = "0.9"
rand_chacha = "0.9"
rapidhash = "4"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
statrs = "0.18"
subgraph = { path = "./crates/subgraph" }
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.bench]
strip = "none"
debug = true

[profile.release]
lto = "thin"
