[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
bollard.workspace = true
duct.workspace = true
fast-glob.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
statrs.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
serde_with.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true

[dev-dependencies]
insta = { workspace = true }
