[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
base64 = "0.22"
bollard.workspace = true
duct.workspace = true
fast-glob.workspace = true
futures-util.workspace = true
itertools.workspace = true
plotters = { version = "0.3", default-features = false, features = [
    "svg_backend",
    "full_palette",
    "all_series",
    "all_elements",
] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
statrs.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta = { workspace = true }
