[package]
name = "subgraph"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
axum.workspace = true
futures-util.workspace = true
minicbor-serde.workspace = true
quick_cache.workspace = true
rapidhash.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
