[package]
name = "subgraph"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
async-graphql = "7"
axum = "0.8"
postcard = { version = "1", features = ["use-std"] }
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
